objects/ContentVersion.object
<CustomObject><fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Case study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product collateral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White paper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Image</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>External_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External-Approved</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Related_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Content</relationshipLabel>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><recordTypes>
        <fullName>MarketingDocument</fullName>
        <active>true</active>
        <label>Marketing Document</label>
    </recordTypes><recordTypes>
        <fullName>SalesAsset</fullName>
        <active>true</active>
        <label>Sales Asset</label>
    </recordTypes><recordTypes>
        <fullName>SupportDocument</fullName>
        <active>true</active>
        <label>Support Document</label>
    </recordTypes></CustomObject>